# celery_pydantic_test

./: README.md  pyproject.toml  testme.py
celery_test/: testworker.py
